# gaz

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  main.py  main_bokeh.py  pyproject.toml  simple_model.py
.devcontainer/: devcontainer.json
.devcontainer/.conan/: debug
.devcontainer/.scripts/: install_tools.sh
include/gaz/: gaz.hpp
src/: CMakeLists.txt  gaz.cpp  gravity.cpp  gravity.hpp  random_walk.cpp  random_walk.hpp
